   are now available automatically from 'peak.api'.

 - Replaced all use of 'zope.interface' with 'peak.interface' because
   the new 'peak.interface':

   * is considerably smaller and simpler than 'zope.interface'

   * produces Interface objects that can be inspected with the Python
     'pydoc' and 'help()' tools

   * supports and implements the PEP 246 'adapt()' protocol

   * can interoperate with other interface packages, including Zope's, but
     does not require them

   * works with module inheritance (for everything but moduleProvides())

   * lets you use Interfaces as abstract base classes (i.e., you can
     inherit from an interface and turn it into an implementation, and
     you can define default attribute values or method implementations in
     your interfaces

   * Lets you mix interface declarations from any number of frameworks and
     any number of interface types, in a single 'implements()' or
     'classProvides()'

   Most of these features are unavailable in 'zope.interface', and some have
   been declared by the Zope Pope to be unacceptable or undesirable features
   for Zope interfaces.  (Others may be available in some form in future
   versions of Zope X3.)  So, we no longer require or distribute
   'zope.interface'.

 - The signatures of the 'getObjectInstance()', 'getStateToBind()', and
   'getURLContext()' methods in the 'peak.naming' package have changed, to
   place the context or parent component as the first, non-optional argument.
   (If you don't know what these methods are for, you don't need to do anything
   about this, as they are part of the naming package's extensibility
   framework.)

 - 'EigenRegistry' and 'PropertyMap' no longer attempt to figure out whether
   implied (i.e. inherited) interfaces are more or less general with respect
   to a previous registration.  This was behavior that emulated Zope adapter
   registries, but what we really wanted was more akin to a Zope "type"